Remove ab_channel from youtube urls
Also, fix multiple typos

--- a/pages/aGeom_coorSys.html
+++ b/pages/aGeom_coorSys.html
@@ -1,6 +1,6 @@
 ---
 title: Súradnicová sústava
-description: "Súradnicová sústava nám umožňuje opísať polohu bodov v priestore. Najznámejší je Kartezianska Súradnicová sústava. Používa sa s ľubovoľným počtom rozmerov."
+description: "Súradnicová sústava nám umožňuje opísať polohu bodov v priestore. Najznámejšia je Karteziánska súradnicová sústava. Používa sa s ľubovoľným počtom rozmerov."
 keywords: "karteziánsky súradnicový systém, bod, súradnica, os"
 permalink: analyticka_geometria_suradnicova_sustava
 ---
