--- a/pages/aGeom_usageCG.html
+++ b/pages/aGeom_usageCG.html
@@ -156,9 +156,7 @@ Zazvonil zvonec a vývoju hry je koniec. Náš unikátny výtvor sme zavesili do
 <div class='literature'>
 [1] JOHNSON. Z.: 20 Fun Facts About Snow White and the Seven Dwarfs on Its 80th Anniversary. 2017. https://www.eonline.com/news/901665/20-fun-facts-about-snow-white-and-the-seven-dwarfs-on-its-80th-anniversary<br /><br />
 
-[2] NVIDIA developer: RTX Boulevard - Direct Illumination Demo. 2021. https://www.youtube.com/watch?v=AiliuDkVJRs&t=19s&ab_channel=NVIDIADeveloper
+[2] NVIDIA developer: RTX Boulevard - Direct Illumination Demo. 2021. https://www.youtube.com/watch?v=AiliuDkVJRs
 </div>
-
-
 
 </div>
