--- a/pages/geom_line.html
+++ b/pages/geom_line.html
@@ -15,6 +15,7 @@ Každé dva body, ktoré si vyberieme, sa dajú spojiť jednou priamkou. Je to n
 
 <h2>Vzájomná poloha priamok</h2>
 Priamky môžu byť <b>rovnobežné, rôznobežné a totožné</b>. Rovnobežné priamky sa nikde nepretnú. Z toho vyplýva, že nemajú žiaden bod spoločný. Rôznobežné priamky idú každá iným smerom a niekde sa pretnú v jednom bode. Majú teda spoločný iba jeden bod. Totožné priamky ležia na sebe a kvôli tomu majú všetky body spoločné.
+
 <figure>
   <img src="assets/images/geom_lineParallelism.png" alt="Vzájomná poloha priamok">
   <figcaption>Obr. 1.: Rovnobežnosť priamok. Na prvom obrázku <i>a)</i> sú rovnobežné priamky. Ani jeden bod nemajú spoločný. Na obrázku <i>b)</i> sú všetky štyri priamky rôznobežné. U nás na papieri sa síce nepretínajú, ale keďže sú nekonečne dlhé, tak sa niekde pretnú určite. Totožné priamky sú na obrázku <i>c)</i>. Majú všetky body rovnaké.</figcaption>
@@ -23,6 +24,7 @@ Priamky môžu byť <b>rovnobežné, rôznobežné a totožné</b>. Rovnobežné
 <h2>Využitie priamok</h2>
 Priamky vieme použiť na rôzne skvelé veci a jednou z nich sú určite optické ilúzie.
 <div id="opticalIllusionImages">
+
 <figure>
   <img loading="lazy" src="assets/images/opticalIllusion/CafeWall.png" alt="Optická ilúzia Cafe wall">
   <figcaption>Obr. 2.: Cafe Wall[1]: aj tebe sa zdá, že tie vodorovné čiary sú krivé?</figcaption>
@@ -45,7 +47,7 @@ Priamky vieme použiť na rôzne skvelé veci a jednou z nich sú určite optick
 
 <figure>
   <img loading="lazy" src="assets/images/opticalIllusion/Muller-Lyer.png" alt="Optická ilúzia Muller-Lyer">
-  <figcaption>Obr. 6.:Muller-Lyer ilúzia[1]: ktorá z týchto čiar je najdlhšia? Tá stredná? Určite? </figcaption>
+  <figcaption>Obr. 6.: Muller-Lyer ilúzia[1]: ktorá z týchto čiar je najdlhšia? Tá stredná? Určite? </figcaption>
 </figure>
 
 <figure>
@@ -60,7 +62,7 @@ Priamky vieme použiť na rôzne skvelé veci a jednou z nich sú určite optick
 
 </div>
 
-Priamky sa samozrejme dajú použiť aj inak. Študenti technických odborov o tom vedia svoje. Toto využitie je však jedno z tých krajších. Len tak pre zaujímavosť, spýtaj sa kamarátov či vidia veci v ilúziach rovnako ako ty ;).<br /><br />
+Priamky sa samozrejme dajú použiť aj inak. Študenti technických odborov o tom vedia svoje. Toto využitie je však jedno z tých krajších. Len tak pre zaujímavosť, spýtaj sa kamarátov či vidia veci v ilúziách rovnako ako ty ;).<br /><br />
 
 <h2>Zdroje</h2>
 
