--- a/pages/gonio_SineCosineTangent.html
+++ b/pages/gonio_SineCosineTangent.html
@@ -30,15 +30,12 @@ Sínus, ako funkcia, je zadefinovaná na jednotkovej kružnici pomocou dĺžky j
   <figcaption>Obr. 2.: Máme <b>jednotkovú kružnicu</b> a chceme na nej <b>zadefinovať sínus</b>. Samozrejme chceme si čo najviac <b>zjednodušiť počítanie</b>. Vieme, že sínus je protiľahlá strana/prepona. No a akým číslom sa <b>najlepšie delí</b>? Predsa <b>číslom 1</b>. Takže treba <b>trojuholník s preponou 1</b>. Presne taký trojuholník dostaneme, keď ako <b>preponu zvolíme "polomer" kružnice</b>. Sínus je teda protiľahlá strana/prepona. To je protiľahlá strana/1, čo vlastne znamená, že <b>sínus je rovný protiľahlej strane</b>. A protiľahlá strana je tá žltá čiara. To je dôvod, prečo môžeme sínus zadefinovať na jednotkovej kružnici pomocou dĺžky tej žltej čiary.</figcaption>
 </figure>
 
-
 Goniometrické funkcie a teda aj <b>sínus sa dá zobraziť viacerými spôsobmi</b>. Každý spôsob je na niečo dobrý. Keď je zobrazený na <b>jednotkovej kružnici</b>, spolu s ďalšími funkciami, je pekne vidieť vzťahy medzi týmito funkciami. Napríklad, že čím je väčší sínus, tým je menší kosínus. Ďalej sa sínus dá zobraziť <b>v grafe</b>. Tu je sú pekne vidieť jeho vlastnosti. Napríklad jeho definičný obor, obor hodnôt, rôzne posunutia natiahnutia, či je k nemu niečo pripočítané a tak. Na grafe pekne vidno aj to, že sínus je periodický, a teda sa po určitom čase opakuje. Sínus sa dá zobraziť aj <b>v tabuľke</b>. Tu sú vidieť konkrétne hodnoty pre konkrétne uhly.
 
 <figure>
   <img loading="lazy" src="assets/images/gonio_sineExplanation.gif" alt="Sínus je zobrazený v tabuľke, grafe a na jednotkovej kružnici.">
   <figcaption>Obr. 3.: Sínus je vypočítaný pre pár uhlov. Je zobrazený v grafe a na jednotkovej kružnici. Tabuľka by sa do obrázku nezmestila, tak je tam aspoň pre každý krok uvedený uhol a jeho hodnota. </figcaption>
 </figure>
-
-
 
 <b>Sínus</b> nemusí byť iba taký pekný, že ide od -1 po 1 a perióda je 360°. <b>Môže byť hocijako ponaťahovaný a poposúvaný</b>. Naťahovať sa dá tak, že sa vynásobí nejakými číslami. Posúva sa tak, že sa k nemu zasa nejaké čísla pripočítajú.
 
@@ -53,7 +50,7 @@ Na nasledujúcich obrázkoch je nakreslené, ako sínus menia jednotlivé písme
 
 <figure>
   <img loading="lazy" src="assets/images/gonio_graphSinBx.png" alt="sin(b*x)">
-  <figcaption>Obr. 5.: Písmenom <i>b</i> sa násobí uhol vnútri sínusu. Znamená to, že uhly sa síce dávajú do sínusu pekne po rade, ale výsledok je akoby pre každý b-tý uhol. <i>Napríklad: funkcia sin(4*x). Za x postupne dosadíme 1°, 2°, 3°. S týmito číslami sa však najprv stane to, že sa vynásobia so štvorkou a až potom sa z nich spraví sínus. Teda pre 1° bude výsledok sin(4°), pre 2° bude výsledok sin(8°) a pre 3° to bude sin(12°).</i> Násobenie písmenkom <i>b</i> sínus ponaťahuje/poskŕča do šírky. Skrátka vzdialenosť medzi kopčekmi bude iná. <b>Písmeno <i>b</i> mení dĺžku periódy.</b></figcaption>
+  <figcaption>Obr. 5.: Písmenom <i>b</i> sa násobí uhol vnútri sínusu. Znamená to, že uhly sa síce dávajú do sínusu pekne po rade, ale výsledok je akoby pre každý b-ty uhol. <i>Napríklad: funkcia sin(4*x). Za x postupne dosadíme 1°, 2°, 3°. S týmito číslami sa však najprv stane to, že sa vynásobia so štvorkou a až potom sa z nich spraví sínus. Teda pre 1° bude výsledok sin(4°), pre 2° bude výsledok sin(8°) a pre 3° to bude sin(12°).</i> Násobenie písmenkom <i>b</i> sínus ponaťahuje/poskŕča do šírky. Skrátka vzdialenosť medzi kopčekmi bude iná. <b>Písmeno <i>b</i> mení dĺžku periódy.</b></figcaption>
 </figure>
 
 <figure>
@@ -109,10 +106,9 @@ V šiestom riadku je sin(2x). Tu treba najprv vypočítať 2x a potom z toho spr
 V siedmom riadku sa ráta 2+sin(x). Tu sa najprv spraví sínus x a potom sa k výsledku pripočíta dvojka. Napr.: <b>2+sin(-63) = 2+(-0,81) = 2-0,81 = 1,11</b>.
 </li>
 <li>
-V poslednom ôsmom riadku je sin(x+30). Najprv sa dosadia stupne za x, pripočíta sa k nim ďalších 30 stupňov a z toho sa spraví sínus. Napr: <b>sin(-63+30) = sin(-33) = -0,54</b>.
+V poslednom ôsmom riadku je sin(x+30). Najprv sa dosadia stupne za x, pripočíta sa k nim ďalších 30 stupňov a z toho sa spraví sínus. Napr.: <b>sin(-63+30) = sin(-33) = -0,54</b>.
 </li>
 </ul>
-
 
 Tu je pripravené malé matematické ihrisko, kde si môžeš sínus ponaťahovať do vôle. Všimni si, ako jednotlivé písmená menia graf. Pri hraní s grafom si daj pozor, lebo os <i>x</i> je v radiánoch, nie v stupňoch. Teda aj hodnota písmena <i>c</i> je v radiánoch a nie v stupňoch. To, ako písmenká menia graf nezávisí od jednotiek, v ktorých sú uvedené uhly. Teda takisto sa bude graf meniť, či uhly budú v stupňoch alebo v radiánoch.
 <br /><br />
@@ -160,7 +156,7 @@ calculator.setExpression({
 </ul>
 
 <h2>Kosínus</h2>
-Pán <b>Edmund Gunter</b> sa narodil v Hertfordshire v roku 1581. Vyštudoval teológiu a stal sa anglickým duchovným. No jeho celoživotnou láskou bola matematika, teda hlavne vzťah medzi matematikou a reálnym svetom. Skoro sa stal aj jedným z prvých profesorov geometrie na Oxfordskej univerzite. Istý pán Savile daroval Oxfordu peniaze, aby si mohli otvoriť dve prvé prírodovedné fakulty - astronómiu a geometriu. Na pozíciu profesora geometrie sa hlásil aj Gunter. Na pracovný pohovor si doniesol niektoré vynálezy na určovanie vzdialenosti. Práve ukazoval, ako sa dajú zmerať vzdialenosti medzi hviezdami, keď ho prerušil pán Savile. Nakričal naňho, že to nie je geometria, ale len obyčajné predvádzanie trikov. Potom ho s výsmechom poslal domov. A tak sa pán Gunter nestal prvým profesorom geometrie na Oxforde. Veľká škoda sa nestala, lebo začal učiť inde. Stal sa profesorom astronómie v Londýne. Z jeho vynálezov je pre nás najdôležitejší jeden. <b>V roku 1620 použil prvý-krát slovo kosínus.[2] Toto slovo vzniklo z dvoch latinských slov <i>complementi sine</i>, ktoré <i>znamenajú doplnok k sínusu</i></b>.<br /><br />
+Pán <b>Edmund Gunter</b> sa narodil v Hertfordshire v roku 1581. Vyštudoval teológiu a stal sa anglickým duchovným. No jeho celoživotnou láskou bola matematika, teda hlavne vzťah medzi matematikou a reálnym svetom. Skoro sa stal aj jedným z prvých profesorov geometrie na Oxfordskej univerzite. Istý pán Savile daroval Oxfordu peniaze, aby si mohli otvoriť dve prvé prírodovedné fakulty - astronómiu a geometriu. Na pozíciu profesora geometrie sa hlásil aj Gunter. Na pracovný pohovor si doniesol niektoré vynálezy na určovanie vzdialenosti. Práve ukazoval, ako sa dajú zmerať vzdialenosti medzi hviezdami, keď ho prerušil pán Savile. Nakričal naňho, že to nie je geometria, ale len obyčajné predvádzanie trikov. Potom ho s výsmechom poslal domov. A tak sa pán Gunter nestal prvým profesorom geometrie na Oxforde. Veľká škoda sa nestala, lebo začal učiť inde. Stal sa profesorom astronómie v Londýne. Z jeho vynálezov je pre nás najdôležitejší jeden. <b>V roku 1620 použil prvýkrát slovo kosínus.[2] Toto slovo vzniklo z dvoch latinských slov <i>complementi sine</i>, ktoré <i>znamenajú doplnok k sínusu</i></b>.<br /><br />
 
 Kosínus ako funkcia je na jednotkovej kružnici definovaný pomocou dĺžky jednej čiary. Je to tmavožltá čiara z obrázku 1. Na obrázku 9 je vysvetlené, prečo je to práve tá tmavožltá čiara.
 
@@ -168,7 +164,6 @@ Kosínus ako funkcia je na jednotkovej kružnici definovaný pomocou dĺžky jed
   <img loading="lazy" src="assets/images/gonio_unitCircleCosine.png" alt="Definícia kosínusu na jednotkovej kružnici.">
   <figcaption>Obr. 9.: Kosínus chceme definovať ako funkciu. V článku <a href="goniometricke_funkcie" target="_blank">Goniometrické funkcie</a> sme si povedali, že sa to dá na jednotkovej kružnici. Vieme, že <b>kosínus je priľahlá strana/prepona</b>. Samozrejme chceme čo najmenej počítať. Dobre si obzrieme jednotkovú kružnicu a zistíme, že tam dokážeme dostať <b>pravouhlý trojuholník s dĺžkou prepony 1, keď ako preponu použijeme "polomer" kružnice</b>. Kosínus teda definujeme ako priľahlá strana/prepona. Prepona je rovná 1, dostaneme: kosínus α = priľahlá strana/1, teda <b>kosínus α = priľahlá strana</b>. No a priľahlá strana je tá tmavožltá čiara z obrázku 1.</figcaption>
 </figure>
-
 
 <b>Aj kosínus sa dá zobraziť na jednotkovej kružnici, v grafe a v tabuľke</b>. Na jednotkovej kružnici vidno jeho vzťahy s ostatnými funkciami alebo aj to, v ktorom kvadrante je kladný a v ktorom záporný. V grafe vidno jeho vlastnosti. Definičný obor, obor hodnôt, či je s niečím vynásobený, či je k nemu niečo pripočítané a podobne. Je tu vidno aj to, že je periodický, lebo sa jeho hodnoty opakujú. V tabuľke sú zasa vidno konkrétne hodnoty pre konkrétne uhly. Z grafu alebo z jednotkovej kružnice sa len ťažko dá vyčítať presná hodnota kosínusu pre daný uhol.
 
@@ -262,7 +257,7 @@ calculator.setExpression({
 <li>Aké musí byť <i>a</i>, aby kosínus išiel na menšom rozsahu, ako od -1 po 1?</li>
 <li>Čo sa stane, keď <i>a</i> bude 0?</li>
 <li>Čo spraví s grafom záporné <i>a</i>?</li>
-<li>Aké musí byť <i>b</i>, aby bola perióda kosínusu (vzdialenosť medzi kopčekami) väčšia ako pri cos(x)?</li>
+<li>Aké musí byť <i>b</i>, aby bola perióda kosínusu (vzdialenosť medzi kopčekmi) väčšia ako pri cos(x)?</li>
 <li>Aké hodnoty musí mať <i>b</i>, aby perióda bola menšia než pri cos(x)?</li>
 <li>Čo sa stane, keď bude <i>b</i> záporné?</li>
 <li>Aké musí byť <i>c</i>, aby sa graf posunul doľava?</li>
@@ -273,7 +268,7 @@ calculator.setExpression({
 </ul>
 
 <h2>Tangens</h2>
-Albert Girard bol Francúz. Žil v Holandsku, mal rád hudbu, vyštudoval matematiku a robil inžiniera v armáde princa Oranžského. V skratke toľko o človeku, ktorý asi ako prvý na svete použil slovo tangens na pomenovanie pomeru medzi protiľahlou a susednou stranou v pravouhlom trojuholníku. Slovo tangens pochádza z latinského slova tangere, čo znamená dotýkať sa. Ono to je aj pekne vidno na jednotkovej kružnici, že tangens sa jej dotýka iba v jednom bode. Ešte sa vráťme ku Girardovi. Okrem slova tangens ževraj aj ako prvý na svete použil skratky pre sínus, kosínus a tangens - sin, cos, tan. No a <b>slovo tangens sa prvý krát objavilo v jeho diele Trigonométrie z roku 1625</b> [3].<br /><br />
+Albert Girard bol Francúz. Žil v Holandsku, mal rád hudbu, vyštudoval matematiku a robil inžiniera v armáde princa Oranžského. V skratke toľko o človeku, ktorý asi ako prvý na svete použil slovo tangens na pomenovanie pomeru medzi protiľahlou a susednou stranou v pravouhlom trojuholníku. Slovo tangens pochádza z latinského slova tangere, čo znamená dotýkať sa. Ono to je aj pekne vidno na jednotkovej kružnici, že tangens sa jej dotýka iba v jednom bode. Ešte sa vráťme ku Girardovi. Okrem slova tangens že vraj aj ako prvý na svete použil skratky pre sínus, kosínus a tangens - sin, cos, tan. No a <b>slovo tangens sa prvýkrát objavilo v jeho diele Trigonométrie z roku 1625</b> [3].<br /><br />
 
 Tangens je na jednotkovej kružnici zadefinovaný pomocou "oranžovej čiary" z obrázku č. 1. Dolu na obrázku je vysvetlené, prečo je to práve tá čiara.
 
@@ -389,7 +384,6 @@ calculator.setExpression({
 [1] Merlet, J. P. 2004. A NOTE ON THE HISTORY OF TRIGONOMETRIC FUNCTIONS AND SUBSTITUTIONS. http://www.math.stonybrook.edu/~tony/history-resources/HISTORY_OF_TRIGONOMETRIC_F.pdf<br /><br />
 
 [2] Wikipedia. 2021. Edmund Gunter.https://en.wikipedia.org/wiki/Edmund_Gunter <br /><br />
-
 
 [3] O'Connor, J. J., Robertson E. F. 2010. Albert Girard. https://mathshistory.st-andrews.ac.uk/Biographies/Girard_Albert/
 
