--- a/pages/gonio_birth.html
+++ b/pages/gonio_birth.html
@@ -10,7 +10,7 @@ permalink: ako_vznikla_goniometria
 <h1>Ako vznikla goniometria</h1>
 Goniometria taká, ako ju poznáme dnes sa vyvíjala zhruba tri tisícročia. Opísať to všetko, by bolo nadlho. Preto si radšej históriu trošičku upravíme a celý vývoj scvrkneme. Na pochopenie to stačí.<br /><br />
 
-Upravená história začína. Náš príbeh bude začínať jedného pekného dňa, dajme tomu, v strednej ríše v Egypte (to je vtedy, keď stavali pyramídy). V ten letný deň bolo neobyčajne krásne počasie. Slnko svietilo, ale vzduch bol stále svieži. Od mora pofukoval jemný vánok a ani kobylky neotravovali tak, ako zvyčajne. Tunajší slávny architekt Raachef sa opaľoval na dvore. Príjemné popoludnie mu pokazil posol od faraóna. <b>Chceli po ňom, aby panovníkovi postavil parádnu hrobku.</b> Mala to byť najvyššia pyramída v celej egyptskej ríší. Sľúbili mu, že ak sa to podarí, vyvážia ho zlatom. Keď sa nepodarí, dajú ho zožrať krokodílom. Vďaka skvelej motivácií sa Raachef ihneď pustil s chuťou do práce.<br /><br />
+Upravená história začína. Náš príbeh bude začínať jedného pekného dňa, dajme tomu, v strednej ríše v Egypte (to je vtedy, keď stavali pyramídy). V ten letný deň bolo neobyčajne krásne počasie. Slnko svietilo, ale vzduch bol stále svieži. Od mora pofukoval jemný vánok a ani kobylky neotravovali tak, ako zvyčajne. Tunajší slávny architekt Raachef sa opaľoval na dvore. Príjemné popoludnie mu pokazil posol od faraóna. <b>Chceli po ňom, aby panovníkovi postavil parádnu hrobku.</b> Mala to byť najvyššia pyramída v celej egyptskej ríši. Sľúbili mu, že ak sa to podarí, vyvážia ho zlatom. Keď sa nepodarí, dajú ho zožrať krokodílom. Vďaka skvelej motivácií sa Raachef ihneď pustil s chuťou do práce.<br /><br />
 
 Na začiatku ho čakala ohromne ťažká úloha, ale spomienka na krokodílov ho presvedčila, že netreba dlho otáľať. <b>Bolo treba zistiť, ktorá pyramída je najvyššia</b> a potom spočítať rozmery novej pyramídy. Zapálil si oheň, spravil si kávu a pustil sa do práce.<br /><br />
 
@@ -66,14 +66,12 @@ Raachef vedel, že sa o jeho objave bude učiť v školách, tak chcel narobiť 
   <figcaption>Obr. 6.: Názvy a označenia pomerov strán: <b>sin - sínus, cos - kosínus, tan - tangens, cotg - kotangens, sec - sekans, csc - kosekans</b> </figcaption>
 </figure>
 
-Po objavení tejto úžasne myšlienky, Raachef už ľahko dopočítal výšku pyramídy. Vedel by si to aj ty? Pravouhlý trojuholník je k dispozícií na obrázku č. 2. Poznáš jednu stranu a jeden uhol - sú nakreslené čiernou. Ak ti nechýba abstraktné myslenie, stačí napísať vzorec. Ak potrebuješ čísla, môžeš uvažovať, že dĺžka pyramídy je 230 metrov (polku dĺžky snáď vypočítať vieš) a uhol alpha je 128,2° (spraviť 180-128,2 vieš hádam tiež)[1]. Riešnie je dole na obrázku:
-
+Po objavení tejto úžasnej myšlienky, Raachef už ľahko dopočítal výšku pyramídy. Vedel by si to aj ty? Pravouhlý trojuholník je k dispozícií na obrázku č. 2. Poznáš jednu stranu a jeden uhol - sú nakreslené čiernou. Ak ti nechýba abstraktné myslenie, stačí napísať vzorec. Ak potrebuješ čísla, môžeš uvažovať, že dĺžka pyramídy je 230 metrov (polku dĺžky snáď vypočítať vieš) a uhol alpha je 128,2° (spraviť 180-128,2 vieš hádam tiež)[1]. Riešenie je dole na obrázku:
 
 <figure>
   <img loading="lazy" src="assets/images/gonio_pyramidsTriangleExample.png" alt="Počítanie výšky pyramídy">
   <figcaption>Obr. 7.: Výška najvyššej pyramídy v Egypte je 146 metrov. Môžeš si overiť na nete.</figcaption>
 </figure>
-
 
 <h2>Zhrnutie</h2>
 Sínus, kosínus, tangens, kotangens, sekans, kosekans sú mená pre pomery strán v pravouhlom trojuholníku. Pre každý uhol je iný pomer strán. Pre jeden uhol je pomer strán rovnaký, nezávisle od toho, ako je trojuholník veľký. Keď poznáme pomer, stačí nám poznať len jednu stranu a druhú dopočítame.
