--- a/pages/gonio_functions.html
+++ b/pages/gonio_functions.html
@@ -21,11 +21,11 @@ Výsledok treba dostať iným spôsobom. <b>Potrebujeme niečo, kde by uhol moho
 Pán Euler prišiel na to, že to niečo je <a href="jednotkova_kruznica" target="_blank"><b>jednotková kružnica</b></a>. Dajú sa tam nakresliť pravouhlé trojuholníky, takže sa môžu vypočítať pomery strán. Veľkou pomocou je, že jedna strana trojuholníka môže mať dĺžku 1. Dôvod si povieme v článkoch o konkrétnych funkciách.
 
 <figure>
-  <img src="assets/images/gonio_unitCircleTriangles.png" alt="Jednotková kružnica s vyznačenými pravouhlými trojuholníkami">
+  <img src="assets/images/gonio_unitCircleTriangles.png" alt="Jednotková kružnica s vyznačenými pravouhlými trojuholníkmi">
   <figcaption>Obr. 1.: Na obrázku sú jednotkové kružnice, v ktorých sú vyznačené pravouhlé trojuholníky. Práve vďaka nim sa dajú zadefinovať goniometrické funkcie pre rôzne uhly. Existuje viacero vizualizácií, ale my budeme pracovať s tými, čo sú na obrázkoch <i>a</i>, <i>b</i>, a <i>c</i>. <b>EŠTE SI VŠIMNI ČIARU, KTORÁ JE NAZVANÁ "POLOMER". ĎALEJ JU BUDEME SPOMÍNAŤ, TAK ABY SI VEDEL O ČO IDE.</b></figcaption>
 </figure>
 
-Keď si vypočítame pomery strán v týchto trojuholníkoch, dostaneme hodnoty goniometrických funkcii. Vieme ich zakresliť pomocou čiar. Teraz nie je dôležité, ako presne vznikli čiary, povieme si o tom neskôr. Hlavná myšlieka je, že <b>hodnoty goniometrických funkcii sa dajú vyjadriť pomocou určitých čiar na jednotkovej kružnici</b>. V obrázku sú vyznačené farebne.
+Keď si vypočítame pomery strán v týchto trojuholníkoch, dostaneme hodnoty goniometrických funkcii. Vieme ich zakresliť pomocou čiar. Teraz nie je dôležité, ako presne vznikli čiary, povieme si o tom neskôr. Hlavná myšlienka je, že <b>hodnoty goniometrických funkcii sa dajú vyjadriť pomocou určitých čiar na jednotkovej kružnici</b>. V obrázku sú vyznačené farebne.
 
 <figure>
   <img loading="lazy" src="assets/images/gonio_unitCircle.png" alt="Jednotková kružnica s vyznačenými goniometrickými funkciami">
@@ -50,7 +50,7 @@ Ten uhol, pre ktorý sa počítajú pomery strán je medzi "polomerom" a tou "bl
 
 <figure>
   <img loading="lazy" src="assets/images/gonio_unitCircleAngles.png" alt="Podľa uhlu &#946; sa počíta pomer strán, ale do funkcie sa dáva &#945;. Pre oba uhly je výsledok rovnaký.">
-  <figcaption>Obr. 5.: Pomery strán v trojuholníkoch by sa počítali pre uhol &#946;. Do funkcie sa však dáva uhol &#945;, nakoľko vie byť hocijaký (väčší ako 90°, záporný. V podstate hocijaké reálne číslo.). Môžeme tak spraviť preto, lebo hodnoty goniometrických funkcií su pre &#945; a &#946; rovnaké.</figcaption>
+  <figcaption>Obr. 5.: Pomery strán v trojuholníkoch by sa počítali pre uhol &#946;. Do funkcie sa však dáva uhol &#945;, nakoľko vie byť hocijaký (väčší ako 90°, záporný. V podstate hocijaké reálne číslo.). Môžeme tak spraviť preto, lebo hodnoty goniometrických funkcií sú pre &#945; a &#946; rovnaké.</figcaption>
 </figure>
 
 <h2>Vizualizácia goniometrických funkcií</h2>
@@ -58,12 +58,12 @@ Ten uhol, pre ktorý sa počítajú pomery strán je medzi "polomerom" a tou "bl
 Poznáme tri zaužívané spôsoby zobrazovania goniometrických funkcií. Jeden je na jednotkovej kružnici, druhý v grafe a tretí pomocou tabuľky. Na jednotkovej kružnici sú pekne vidieť vzťahy medzi funkciami, ale už horšie sú viditeľné vlastnosti funkcií. S grafom je to naopak. Lepšie sú vidno vlastnosti funkcií, ale horšie sú vidno ich vzájomné vzťahy. V tabuľke zasa ani nie je poriadne vidieť, že je to goniometrická funkcia, ale zato tam vieme vyrátať presné hodnoty funkcií.
 
 <h2>Goniometrické funkcie</h2>
-Goniometrické funkcie sú vysvetlené v zvlásť článkoch, pretože jeden článok by bol príliš dlhý. Tri najznámejšie a najpoužívanejšie - sínus, kosínus a tangens sú <a href="goniometricke_funkcie_sinus_kosinus_tangens" target="_blank">tu</a>. Ich menej známy bratranci kotangens, sekans a kosekans sú tu.<br /><br />
+Goniometrické funkcie sú vysvetlené v zvlášť článkoch, pretože jeden článok by bol príliš dlhý. Tri najznámejšie a najpoužívanejšie - sínus, kosínus a tangens sú <a href="goniometricke_funkcie_sinus_kosinus_tangens" target="_blank">tu</a>. Ich menej známy bratranci kotangens, sekans a kosekans sú tu.<br /><br />
 
 <h2>Zdroje</h2>
 <div class='literature'>
 [1] Merlet, J. P. 2004. A NOTE ON THE HISTORY OF TRIGONOMETRIC FUNCTIONS AND SUBSTITUTIONS. http://www.math.stonybrook.edu/~tony/history-resources/HISTORY_OF_TRIGONOMETRIC_F.pdf<br /><br />
 
-[2] Khan Academy. Unit Circle Definition of Trig Functions. https://www.youtube.com/watch?v=ZffZvSH285c&ab_channel=KhanAcademy. <br /><br />
+[2] Khan Academy. Unit Circle Definition of Trig Functions. https://www.youtube.com/watch?v=ZffZvSH285c
 </div>
 </div>
