--- a/pages/gonio_functionsUsage.html
+++ b/pages/gonio_functionsUsage.html
@@ -22,7 +22,7 @@ Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránk
 
 <h2>Prostredie, v ktorom sa šíri zvuk</h2>
 
-V škole si sa asi už dopočul, že <b>zvuk je mechanické vlnenie. To znamená, že sa šíri pomocou vĺn a na svoj prenos potrebuje nejaké médium. Nedokáže sa šíriť v prázdnom priestore.</b> Na prenos zvuku môžu slúžiť rôzne materiály, napríklad voda, drevo alebo aj kosti, ktoré tvoria našu čelusť. Ak neveríš, spýtaj sa Beethowena, ako komponoval svoje skladby, keď ohluchol. No najčastejšie sa stretávame so vzduchom. Ten nesie našu reč, hudbu, hluk mesta ale aj ticho prírody.<br /><br />
+V škole si sa asi už dopočul, že <b>zvuk je mechanické vlnenie. To znamená, že sa šíri pomocou vĺn a na svoj prenos potrebuje nejaké médium. Nedokáže sa šíriť v prázdnom priestore.</b> Na prenos zvuku môžu slúžiť rôzne materiály, napríklad voda, drevo alebo aj kosti, ktoré tvoria našu čeľusť. Ak neveríš, spýtaj sa Beethowena, ako komponoval svoje skladby, keď ohluchol. No najčastejšie sa stretávame so vzduchom. Ten nesie našu reč, hudbu, hluk mesta ale aj ticho prírody.<br /><br />
 
 <b>Vzduch je veľmi dobrým médiom na prenos zvuku</b>. Jeho častice nie sú príliš zviazané na to, aby sa nedokázali rozvlniť. Nie sú ani príliš ďaleko od seba na to, aby nedokázali niesť zvuk. Keď niečo vydá zvuk, rozvlní sa vzduch, vlna sa šíri prostredím až príde k niečomu, čo je schopné ju zachytiť a spracovať. To môže byť napríklad tvoje ucho alebo mikrofón.
 
@@ -32,9 +32,8 @@ Poďme sa pozrieť na zvukovú vlnu zblízka. Môžeme si ju predstaviť ako vod
 
 <figure>
   <img loading="lazy" src="assets/images/gonio_soundWave.gif" alt="Zvuková vlna">
-  <figcaption>Obr. 1.: Takto vyzerá zvuková vlna. Reproduktor rozkmytá častice vzduchu blízko seba. Tie náražajú do svojich susediek a tie zasa do svojich. Animácia je úryvok z <a href="https://cs.khanacademy.org/science/fyzika-vlneni-a-zvuk/x34b3f391df7f0014:mechanicke-vlneni/x34b3f391df7f0014:zvuk/v/production-of-sound" target="_blank">videa</a>, v ktorom je pekne vysvetlené, ako sa zvuk dostane od reproduktora až po tvoje ucho. Video je v češtine, takže si ho môžu pozrieť aj menej jazykovo zdatní.[1] </figcaption>
+  <figcaption>Obr. 1.: Takto vyzerá zvuková vlna. Reproduktor rozkmitá častice vzduchu blízko seba. Tie narážajú do svojich susediek a tie zasa do svojich. Animácia je úryvok z <a href="https://cs.khanacademy.org/science/fyzika-vlneni-a-zvuk/x34b3f391df7f0014:mechanicke-vlneni/x34b3f391df7f0014:zvuk/v/production-of-sound" target="_blank">videa</a>, v ktorom je pekne vysvetlené, ako sa zvuk dostane od reproduktora až po tvoje ucho. Video je v češtine, takže si ho môžu pozrieť aj menej jazykovo zdatní.[1] </figcaption>
 </figure>
-
 
 Tak ako vodnú hladinu sčerí kameň, <b>vzduch môže zvlniť nejaký náraz, hlasivky či reproduktor</b>. Nejaká takáto podobná vec naruší pokojnú "hladinu" vzduchu a <b>prinúti častice robiť vlny</b>. Tie sa šíria prostredím. Niektoré sa zachytia v materiáloch, kde sú častice pevne zviazané a nedokážu sa hýbať. Iné postupne zoslabnú až sa vzduch opäť upokojí. Ďalšie sa môžu dostať <b>do tvojho ucha, kde sa prenesú do mozgu a tam sa spracujú</b>. Výsledkom je, že ty počuješ zvuk.
 
@@ -45,7 +44,7 @@ O zachytenie zvukovej vlny sa stará tvoje ucho. Najprv to vonkajšie, ktoré ti
 
 <figure>
   <img loading="lazy" src="assets/images/gonio_ear.png" alt="Ľudské ucho">
-  <figcaption>Obr. 2.: Vľavo hore je vonkašie ucho. Vpravo hore je stredné ucho. Vľavo dole je vnútorné ucho a vpravo dole je sluchový nerv. Za obrázok vďačíme <a href="https://www.medel.com/sk/about-hearing/how-hearing-works" target="_blank">tejto stránke</a>, kde je naše ucho dobre popísané.[2]</figcaption>
+  <figcaption>Obr. 2.: Vľavo hore je vonkajšie ucho. Vpravo hore je stredné ucho. Vľavo dole je vnútorné ucho a vpravo dole je sluchový nerv. Za obrázok vďačíme <a href="https://www.medel.com/sk/about-hearing/how-hearing-works" target="_blank">tejto stránke</a>, kde je naše ucho dobre popísané.[2]</figcaption>
 </figure>
 
 <h2>Mikrofón a reproduktor</h2>
@@ -55,10 +54,10 @@ V mikrofóne sa nachádza tzv. membrána. To je malý kúsok kovu (alebo iného 
 
 <figure>
   <img loading="lazy" src="assets/images/gonio_howMicrophoneWorks.gif" alt="Ako funguje mikrofón">
-  <figcaption>Obr. 3.: Nahrávanie zvuku pomocou mikrofónu. Ukážka je z <a href="https://www.youtube.com/watch?v=d_crXXbuEKE&ab_channel=IntoTheOrdinary" target="_blank">tohoto videa</a>.[3]</figcaption>
+  <figcaption>Obr. 3.: Nahrávanie zvuku pomocou mikrofónu. Ukážka je z <a href="https://www.youtube.com/watch?v=d_crXXbuEKE" target="_blank">tohoto videa</a>.[3]</figcaption>
 </figure>
 
-Mikrofónov je veľa druhov a každý je dobrý na niečo iné. Jedny sú lepšie na nahrávky orchestra, druhé zasa používajú speváci pri štúdiových nahrávkach a iné moderátori v televízií. Ďalší typ mikrofónu sa nachádza aj v tvojom telefóne (veď ako inak by si vedel telefonovať?). Líšia sa vo veľkoti membrány, kvalite či veľkosti samotného mikrofónu.<br /><br />
+Mikrofónov je veľa druhov a každý je dobrý na niečo iné. Jedny sú lepšie na nahrávky orchestra, druhé zasa používajú speváci pri štúdiových nahrávkach a iné moderátori v televízií. Ďalší typ mikrofónu sa nachádza aj v tvojom telefóne (veď ako inak by si vedel telefonovať?). Líšia sa vo veľkosti membrány, kvalite či veľkosti samotného mikrofónu.<br /><br />
 
 Inak zvuku, ktorý je už "zapísaný v elektrickom prúde" sa hovorí <b>analógový signál</b>.<br /><br />
 
@@ -95,7 +94,7 @@ else{
 <h2>Zvuk ako sínus</h2>
 Zvuk už je nahratý v počítači no jeho graf je príliš komplikovaný na vysvetľovanie. Treba začať od niečoho jednoduchšieho.<br /><br />
 
-Najľahší je úplne obyčajný sínus. Dá sa meniť jeho frekvencia a amplitúda. Rýchlo si spomeň, čo sú zač tieto veci a ako sa dajú meniť. <b>Čím je frekvencia menšia, tým je zvuk hlbší</b>. Naopak, čím je frekvencia väčšia, tým je zvuk vyšší. <b>My ľudia počujeme frekvencie v rozsahu od 20Hz do 20kHz</b>. Keď počúvame zvuk s frekvenciou 20Hz, prichádza do nášho ucha 20 zvukových vĺn za sekundu. 20kHz je najvyšší zvuk, ktorý počujeme. Určite vieš, že keď počúvame zvuk s frekveciou 20kHz, je to zvuk s frekvenciou 20 000Hz (premieňanie jednotiek). Vtedy do nášho ucha prichádza až 20 000 zvukových vĺn za sekundu. <b>Amplitúda mení hlasitosť zvuku. Čím je väčšia, tým je zvuk hlasnejší.</b><br /><br />
+Najľahší je úplne obyčajný sínus. Dá sa meniť jeho frekvencia a amplitúda. Rýchlo si spomeň, čo sú zač tieto veci a ako sa dajú meniť. <b>Čím je frekvencia menšia, tým je zvuk hlbší</b>. Naopak, čím je frekvencia väčšia, tým je zvuk vyšší. <b>My ľudia počujeme frekvencie v rozsahu od 20Hz do 20kHz</b>. Keď počúvame zvuk s frekvenciou 20Hz, prichádza do nášho ucha 20 zvukových vĺn za sekundu. 20kHz je najvyšší zvuk, ktorý počujeme. Určite vieš, že keď počúvame zvuk s frekvenciou 20kHz, je to zvuk s frekvenciou 20 000Hz (premieňanie jednotiek). Vtedy do nášho ucha prichádza až 20 000 zvukových vĺn za sekundu. <b>Amplitúda mení hlasitosť zvuku. Čím je väčšia, tým je zvuk hlasnejší.</b><br /><br />
 
 Ako názornú ukážku sme si vybrali tón A4. Má peknú okrúhlu frekvenciu 440Hz. Prvý je tón A s amplitúdou 1 a druhý s amplitúdou 0,025. Čo myslíš, ktorý z nich bude hlasnejší? Tretí tón je tiež tón A, ale posunutý o oktávu nižšie. Jeho frekvencia je 220Hz. Ktorý z nich bude hlbší? Frekvencie všetkých tónov si môžeš pozrieť na <a href="https://pages.mtu.edu/~suits/notefreqs.html" target="_blank">tejto stránke</a>.<br /><br />
 
@@ -133,10 +132,10 @@ Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránk
 
 Keď rôzne hudobné nástroje hrajú tón A, každý z nich má najvýraznejšiu frekvenciu 440Hz. No každý z nich popritom vydáva aj iné frekvencie. Ich amplitúda (hlasitosť) je menšia. Tón "neprekričia", ale dodajú mu niečo, čo voláme farba. Práve <b>farba tónu odlišuje od seba rôzne nástroje</b>.<br /><br />
 
-V ukážke zafarbíme tón A rôznymi frekvenciami. Na tóny hudobných nástrojov si však netrúfneme, pretože oni sa skladajú z veľmi veľa frekvencií. Skrížili sme iba čistý tón A s inými frekveciami. Ukážky sú tu:<br /><br />
+V ukážke zafarbíme tón A rôznymi frekvenciami. Na tóny hudobných nástrojov si však netrúfneme, pretože oni sa skladajú z veľmi veľa frekvencií. Skrížili sme iba čistý tón A s inými frekvenciami. Ukážky sú tu:<br /><br />
 
 <div class="audioPlayer">
-Tón A4. Frekvencia 440Hz. Amplitúda 1. K nemu je pričítaná fekvencia 220Hz s amplitúdou 0.5: <b>sin(440x) + 0.5*sin(220x)</b>.<br />
+Tón A4. Frekvencia 440Hz. Amplitúda 1. K nemu je pričítaná frekvencia 220Hz s amplitúdou 0.5: <b>sin(440x) + 0.5*sin(220x)</b>.<br />
 <audio controls>
   <source src="assets/sounds/gonio_toneA_05x220Hz.mp3" type="audio/mpeg">
 Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránku otvoriť v inom prehliadači.
@@ -146,7 +145,7 @@ Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránk
 <br /><br />
 
 <div class="audioPlayer">
-Tón A4. Frekvencia 440Hz. Amplitúda 1. K nemu je pričítaná fekvencia 880Hz s amplitúdou 0.5: <b>sin(440x) + 0.5*sin(880x)</b>.<br />
+Tón A4. Frekvencia 440Hz. Amplitúda 1. K nemu je pričítaná frekvencia 880Hz s amplitúdou 0.5: <b>sin(440x) + 0.5*sin(880x)</b>.<br />
 <audio controls>
   <source src="assets/sounds/gonio_toneA_05x880Hz.mp3" type="audio/mpeg">
 Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránku otvoriť v inom prehliadači.
@@ -156,7 +155,7 @@ Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránk
 <br /><br />
 
 <div class="audioPlayer">
-Tón A4. Frekvencia 440Hz. Amplitúda 1. K nemu je pričítaná fekvencia 880Hz s amplitúdou 0.5 a frekvencia 220Hz s amplitúdou 0.25: <b>sin(440x) + 0.5*sin(880x) + 0.25*sin(220x).</b><br />
+Tón A4. Frekvencia 440Hz. Amplitúda 1. K nemu je pričítaná frekvencia 880Hz s amplitúdou 0.5 a frekvencia 220Hz s amplitúdou 0.25: <b>sin(440x) + 0.5*sin(880x) + 0.25*sin(220x).</b><br />
 <audio controls>
   <source src="assets/sounds/gonio_toneA_05x880Hz_025x220Hz.mp3" type="audio/mpeg">
 Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránku otvoriť v inom prehliadači.
@@ -164,7 +163,6 @@ Je nám ľúto, ale tvoj prehliadač nevie prehrať tento zvuk. Skús si stránk
 </div>
 
 <br /><br />
-
 
 <figure>
   <img loading="lazy" id="tonesSlideShow" src="assets/images/gonio_graphToneA.png" onclick="changeTonesImages()" alt="Viacero obrázkov - tóny A4 a A3">
@@ -198,15 +196,14 @@ tonesSlideShow.src=toneImages[tonesIterator]
 
 Prešli sme si zopár jednoduchých zvukov. Teraz si už určite vieš spojiť tón s tým, ako vyzerá v grafe. <b>Zložitejšie zvuky, ako je napríklad hudba alebo reč, sa skladajú z veľmi veľa sínusov rôznych frekvencií a amplitúd</b>. Na prvý pohľad to vyzerá ako jeden veľký chaos, no dá sa v tom spraviť poriadok.
 
-<b>Pokročilými metódami sa dá zistiť z akých frekvencií sa zvuk skladá</b>. Dokonca vieme aj povedať amplitúdu frekvencií. Slúži na to niečo, čo sa volá frekvenčná analýza. Robí sa pomocou Fourierovej transformácie. Týmto chceme pozdraviť všetkých budúcich a aj terajších vysokoškolákov, ktorým barón Fourier nedá spávať. Fourierovu transformáciu teraz rozoberať nebudeme. Chceme vám však ukázať frekvenčnú analýzu tónu A4 rôznych hudobných nástrojov. Je na nej pekne vidieť, že frekvencia 440Hz má pri každom nástroji najväčšiu amplitúdu. Okrem nej má každý nástroj zastúpené aj iné frekvencie. Tieto frekvencie dodávajú farbu pre zvuk, ktorý vychádza z nástroja. <b>Vďaka farbe tónu znie každý nástroj inak a my vieme rozoznať, či hrajú husle, piáno alebo flauta</b>.
+<b>Pokročilými metódami sa dá zistiť z akých frekvencií sa zvuk skladá</b>. Dokonca vieme aj povedať amplitúdu frekvencií. Slúži na to niečo, čo sa volá frekvenčná analýza. Robí sa pomocou Fourierovej transformácie. Týmto chceme pozdraviť všetkých budúcich a aj terajších vysokoškolákov, ktorým barón Fourier nedá spávať. Fourierovu transformáciu teraz rozoberať nebudeme. Chceme vám však ukázať frekvenčnú analýzu tónu A4 rôznych hudobných nástrojov. Je na nej pekne vidieť, že frekvencia 440Hz má pri každom nástroji najväčšiu amplitúdu. Okrem nej má každý nástroj zastúpené aj iné frekvencie. Tieto frekvencie dodávajú farbu pre zvuk, ktorý vychádza z nástroja. <b>Vďaka farbe tónu znie každý nástroj inak a my vieme rozoznať, či hrajú husle, piano alebo flauta</b>.
 
 <figure>
   <img loading="lazy" src="assets/images/gonio_graphMusicInstruments.png" alt="Frekvenčná analýza rôznych hudobných nástrojov.">
-  <figcaption>Obr. 6.: Husle, ukulele, piáno, flauta. Tieto štyri nástroje zahrali tón A, ktorý bol nahratý do počítača. Fourierovov transformáciou sa zistilo, z akých frekvencií sa tóny skladajú. Výsledok sa nakreslil do grafu, kde na osi x sú frekvencie a na osi y je amplitúda (teda ako hlasno je danú frekvenciu v tóne počuť).[5]</figcaption>
+  <figcaption>Obr. 6.: Husle, ukulele, piano, flauta. Tieto štyri nástroje zahrali tón A, ktorý bol nahratý do počítača. Fourierovov transformáciou sa zistilo, z akých frekvencií sa tóny skladajú. Výsledok sa nakreslil do grafu, kde na osi x sú frekvencie a na osi y je amplitúda (teda ako hlasno je danú frekvenciu v tóne počuť).[5]</figcaption>
 </figure>
 
 Na záver krátke zhrnutie. <b>Vďaka sínusu a kosínusu vieme nahrať do počítača zvuk a tam ho mať uložený</b>. Potom sa s ním dá už ľahko pracovať. Dokážeme ho prehrať, poslať, odstrániť šum, pridať/ubrať hlasitosť, zmiešať s iným zvukom a veľa iných vecí. Prácu so zvukom uľahčuje Fourierova transformácia, ktorá zvuk rozloží na frekvencie. Keď poznáme zastúpenie a veľkosť frekvencií, vieme ich jednotlivo potlačiť/zvýrazniť alebo úplne vymazať. <b>Výsledkom je, že si môžeš púšťať pesničky, filmy či volať cez videohovor</b>.
-
 
 <h2>Ako počujú zvieratá</h2>
 
@@ -218,7 +215,7 @@ Pre niekoho možno prekvapujúca informácia, ale <b>zvieratá počujú inak ako
 
 &#128024; <b>Slony:</b> človek by si pomyslel, že slony sa bežne dorozumievajú trúbením. Nie je to celkom pravda. Slony vydávajú veľmi hlboké tóny, ktoré človek nezachytí. Oni ich počujú a to dokonca až na 10 kilometrov.[6]<br /><br />
 
-&#128008; <b>Mačky:</b> jeden výskum sa zaoberal tým, či mačky ľúbia muziku. Ľúbia, ale nie hocijakú. Musí byť skomponovaná práve pre ne. Mačky vydávajú zvuky v určitých frekvenciách a v určitom "rytmuse". Výskumníci zložili mačacie pesničky obsahujúce ich obľúbené frekvencie. Keď pesničky pustili svojim poslucháčkam, tie sa túlili k reproduktorm ako divé.[6]<br /><br />
+&#128008; <b>Mačky:</b> jeden výskum sa zaoberal tým, či mačky ľúbia muziku. Ľúbia, ale nie hocijakú. Musí byť skomponovaná práve pre ne. Mačky vydávajú zvuky v určitých frekvenciách a v určitom "rytmuse". Výskumníci zložili mačacie pesničky obsahujúce ich obľúbené frekvencie. Keď pesničky pustili svojim poslucháčkam, tie sa túlili k reproduktorom ako divé.[6]<br /><br />
 
 &#128375; <b>Pavúky:</b> tarantula nemá uši a ani žiadna časť jej mozgu nespracováva zvuk. Napriek tomu však počuje. Jemné chĺpky na jej nožičkách dokážu zachytiť zvukové vlny a pomáhajú jej s orientáciou v priestore. Iný, menší, druh pavúkov má na predných labkách nervové bunky, ktoré dokážu spracovať určité frekvencie. Dokáže tak určiť dosť presnú polohu svojej koristi.[7]<br /><br />
 
@@ -245,9 +242,9 @@ Pre niekoho možno prekvapujúca informácia, ale <b>zvieratá počujú inak ako
 
 [2] MEDEL. 2023. Ako funguje sluch?. https://www.medel.com/sk/about-hearing/how-hearing-works<br /><br />
 
-[3] Into The Ordinary. 2016. How do microphones work? - Recording Explained. https://www.youtube.com/watch?v=d_crXXbuEKE&ab_channel=IntoTheOrdinary<br /><br />
+[3] Into The Ordinary. 2016. How do microphones work? - Recording Explained. https://www.youtube.com/watch?v=d_crXXbuEKE<br /><br />
 
-[4] Animagraffs. 2021. How Speakers Make Sound. https://www.youtube.com/watch?v=RxdFP31QYAg&ab_channel=Animagraffs<br /><br />
+[4] Animagraffs. 2021. How Speakers Make Sound. https://www.youtube.com/watch?v=RxdFP31QYAg<br /><br />
 
 [5] Jannereth E., Esch L.: Analyzing Timbres of Various Musical Instruments Using FFT and Spectral Analysis. 2021.<br /><br />
 
