--- a/pages/gonio_usage.html
+++ b/pages/gonio_usage.html
@@ -13,7 +13,7 @@ Pýtaš sa prečo staroveké národy mali potrebu vymýšľať takéto hlúposti
 Aj dnes sa s goniometriou stretneš na veľa miestach. Používa sa všade tam, kde potrebujeme odmerať nejakú výšku, vzdialenosť alebo uhol a nemáme k tomu prístup. Namiesto toho odmeriame to, čo môžeme a vďaka goniometrii dorátame to, čo potrebujeme.
 <figure>
   <img src="assets/images/gonio_usage.png" alt="Použitie goniometrie.">
-  <figcaption>Obr. 1 [1].: S goniometriou vieme vypočítať výšku budov. Ako sa to presne robí, to vedia povedať geodeti. Starí Egypťania vedeli vypočítať výšku pyramíd (a vďaka tomu ich postaviť) pomocou pomerov strán - predchodcu goniometrie. Gréci zasa dokázali pomerne presne určiť vzdialenosť mesiaca od Zeme.</figcaption>
+  <figcaption>Obr. 1.[1]: S goniometriou vieme vypočítať výšku budov. Ako sa to presne robí, to vedia povedať geodeti. Starí Egypťania vedeli vypočítať výšku pyramíd (a vďaka tomu ich postaviť) pomocou pomerov strán - predchodcu goniometrie. Gréci zasa dokázali pomerne presne určiť vzdialenosť mesiaca od Zeme.</figcaption>
 </figure>
 
 O dnešnom praktickom využití goniometrie by ti vedeli povedať aj geodeti. Jedného z nich sme sa na to spýtali. <br /><br />
