--- a/pages/num_numberSystems.html
+++ b/pages/num_numberSystems.html
@@ -1,6 +1,6 @@
 ---
 title: Číselné sústavy
-description: "Číslená sústava je spôsob, akým sa dá zapísať číslo. Poznáme pozičnú a nepozičnú číselnú sústavu. Dnes najčastejšie používame desiatkovú číselnú sústavu."
+description: "Číselná sústava je spôsob, akým sa dá zapísať číslo. Poznáme pozičnú a nepozičnú číselnú sústavu. Dnes najčastejšie používame desiatkovú číselnú sústavu."
 keywords: "číselná sústava, dvojková sústava, desiatková sústava, šestnástková sústava, šesťdesiatková sústava, sčítanie"
 permalink: ciselne_sustavy
 mathjax: true
@@ -9,7 +9,7 @@ mathjax: true
 <div class="content">
 
 <h1>Číselné sústavy</h1>
-Číslená sústava je spôsob, akým sa dá zapísať číslo. Poznáme pozičnú a nepozičnú číselnú sústavu.
+Číselná sústava je spôsob, akým sa dá zapísať číslo. Poznáme pozičnú a nepozičnú číselnú sústavu.
 <h2><a id="num_nonPosNumSys"></a>Nepozičná sústava</h2>
 
 Starí Egypťania boli naozaj schopný národ. Ríša, ktorú založili im poskytovala stabilitu. Keďže už nemuseli bojovať o prežitie, mohli sa venovať aj iným veciam. Ich architektúra postavila pyramídy, chrámy a vztýčila veľké obelisky. V medicíne mohli robiť zložité operácie, ako je napríklad operácia očí alebo mozgu. Venovali sa aj astronómii a 365 dňový rok používame dodnes. Nič z toho by nedokázali bez matematiky. Ich výpočtom by však dnes rozumelo len veľmi málo ľudí, pretože nepoužívali také čísla, aké poznáme dnes. Ich čísla vyzerali takto: <br /><br />
@@ -135,22 +135,22 @@ Na obrázku je príklad pre číslo 98. Najprv prevedieme číslo z osmičkovej 
 
 Týmto by sme chceli skončiť číselné sústavy. Už vieš, ako vznikla pozičná a nepozičná sústava. Vieš aj rozdiel medzi nimi. Vieš, že pozičná sústava nemusí byť len desiatková a tiež vieš prevádzať z jednej sústavy do druhej. Teda aspoň dúfame, že sme ťa ešte viac nepoplietli, ale práve naopak, že sme ti trošku pomohli :) .... ak ťa baví čítať ešte ďalej, je tu nejaká matika navyše. Tú už vedieť nemusíš, iba ak by ťa to zaujímalo.<br /><br />
 
-
-
-
 <h2>Pre tých, ktorých to ešte stále baví čítať</h2>
 UPOZORNENIE!!! ... toto ti už netreba vedieť. Ak sa ti už nechce čítať ďalej nemusíš, máš voľno :D. Ale ak by ťa to náhodou chytilo, sú tu také lahôdky, ako spočítavanie čísiel v rôznych sústavách alebo prevody priamo medzi nimi. Ak si rozhodnutý čítať ďalej, tak sa osloboď od toho, že 2+2=4, lebo nie je. A možno predsa áno, aj keď nie.
 
 <h2>Spočítavanie čísiel v rôznych sústavách</h2>
 V každej číselnej sústave funguje spočítavanie čísiel tak, ako sme zvyknutý v desiatkovej. Keď chceme spočítať dve čísla, napíšeme si ich pod seba. Spočítavame čísla nad sebou, pričom začneme v najnižšom ráde. Koľko razy prejdeme základ sústavy, toľko si prenášame do vyššieho rádu. V príklade je ukázané spočítavanie čísiel v desiatkovej, osmičkovej, šestnástkovej, dvadsiatkovej a dvojkovej sústave. Je to tam napísané spolu s postupom. Len tak pre pripomenutie, v dvadsiatkovej sústave sú všetky čísla do 20 cifry. Teda 15, 16, 19 sú cifry a nie samostatné čísla. Pri dvojkovej sústave je postup rozdelený farebne, lebo je veľmi dlhý a neprehľadný.
+
 <figure>
   <img loading="lazy" src="assets/images/numSys_CountInDifferentNumSys.png" alt="Spočítavanie čísiel v rôznych sústavách">
   <figcaption>Obr. 4.: Spočítavanie čísiel v rôznych sústavách</figcaption>
 </figure>
+
 Na začiatku sme tvrdili, že 2+2 nemusí byť štyri. V trojkovej sústave to skutočne tak nie je. Výsledok je ..., to necháme na teba. Dôležité však ostáva, že stále označuje ten istý počet, ako v desiatkovej sústave alebo číslo 100 v dvojkovej.
 
 <h2>Násobenie v rôznych sústavách</h2>
 Pri násobení, rovnako ako pri sčítaní, môžeme použiť ten istý postup z desiatkovej sústavy. Je to všeobecný postup, pre všetky sústavy, ale my ho poznáme z desiatkovej. Zasa začneme tým, že si napíšeme čísla pod seba. Zoberieme poslednú číslicu zo spodného radu, vynásobíme ňou všetky vo vrchnom a zapíšeme. Zoberieme predposlednú, vynásobíme všetky vo vrchnom a zapíšeme. Zapisujeme do nového riadku a posunieme sa o jednu číslicu doľava. Toto spravíme pre všetky číslice v spodnom rade. Zapísané čísla spočítame a máme výsledok. Násobenie prebieha tak, že vynásobíš čísla, zistíš, koľko razy sa tam nachádza základ sústavy (my sme zvyknutý na 10), vyrátaš si koľko ti ostane. Zvyšok zapíšeš a počet výskytov základu sústavy prenesieš o rád vyššie. Tam ho pripočítaš k číslam, ktoré si násobil v tomto ráde. Ak to nie je z tohto opisu jasné, máme na mysli to násobenie pod seba, ktoré sa učí niekedy na základnej škole. Možno aj na prvom stupni. Pred tým, než pôjdeš na príklad, vynásob si prosím nejaké dve čísla pod seba a hovor si nahlas postup, nech si ho zopakuješ. Máš už hotovo? Dobre, môžeme ísť násobiť v desiatkovej, štvorkovej, päťnástkovej a sedmičkovej sústave. Sedmičková sústava je rozobraná podrobnejšie, začni tou. Päťnástková sústava používa cifry zo šestnástkovej. Aby si nemusel dlho googliť sú to: A=10, B=11, C=12, D=13 a E=14.
+
 <figure>
   <img loading="lazy" src="assets/images/numSys_multiplyInDifferentNumSys.png" alt="Násobenie čísiel v rôznych sústavách">
   <figcaption>Obr. 5.: Násobenie čísiel v rôznych sústavách</figcaption>
@@ -168,11 +168,11 @@ Sčítavanie a násobenie v predchádzajúcich kapitolách sme nerobili len tak.
 <li>keď už sme spočítali všetky členy, ktoré sa násobili, máme výsledok. V príklade je to to podčiarknuté.</li>
 <li>to najlepšie na záver. Tento postup sa dá aplikovať nech prevádzaš z akejkoľvek sústavy do hocijakej inej. U nás môžeš vidieť prevod z 5 do 21 a naopak z 21 do 5.</li>
 </ol>
+
 <figure>
   <img loading="lazy" src="assets/images/numSys_translateBetweenDiffNumSys.png" alt="Prevádzanie priamo zo sústavy do sústavy">
   <figcaption>Obr. 6.: Prevádzanie priamo zo sústavy do sústavy</figcaption>
 </figure>
-
 
 Či vlastné číselné sústavy niekedy využiješ, ťažko povedať. Niečo sme ti však predsa chceli ukázať. Chceli sme ťa trochu vytrhnúť zo zaužívaných dráh myslenia a ukázať ti, že aj taká obyčajná vec, ako spočítavanie dvoch čísiel, môže byť zaujímavá.
 
