--- a/pages/stat_PositionMeasures.html
+++ b/pages/stat_PositionMeasures.html
@@ -132,7 +132,7 @@ Pre Inter je hodnota 88 dva razy, 86 raz, 85 je dva razy, 84 a 82 sú po jednej,
 <h2>Zdroje</h2>
 
 <div class='literature'>
-[1] Quartiles when all numbers are same. 2016. https://math.stackexchange.com/questions/1577748/quartiles-when-all-numbers-are-same <br /><br />
+[1] Quartiles when all numbers are same. 2016. https://math.stackexchange.com/questions/1577748/quartiles-when-all-numbers-are-same
 
 </div>
 </div>
