--- a/pages/stat_data.html
+++ b/pages/stat_data.html
@@ -27,7 +27,7 @@ Toto sú také základné problémy, s ktorými sa štatistika stretá hneď na 
 <h2>Získanie údajov o futbalistoch</h2>
 Vráťme sa k nášmu problému, že chceš kúpiť futbalistov. Chceš ten najlepší klub, ale aby si mohol objektívne určiť, ktorý je ten najlepší, potrebuješ zistiť, kde hrajú tí najlepší futbalisti.<br /><br />
 
-Kvalitu futbalistu chceš tiež určiť objektívne a tak začneš o ňom zberať údaje. Začneš merať ako rýchlo behá, akú má silnú strelu, ako dobre prihráva, ako dobre vedie loptu a milión päť podobných vecí. Nebojsa, nemusíš teraz k sebe domov zavolať Ronalda a dať mu behať šesťdesiatku na čas. Meranie údajov už za teba urobili iný. Na <a href="https://www.youtube.com/watch?v=2T3BmvWIHy4&ab_channel=EASPORTSFIFA" target="_blank">videu</a> si môžeš pozrieť, ako to spravili.<br /><br />
+Kvalitu futbalistu chceš tiež určiť objektívne a tak začneš o ňom zberať údaje. Začneš merať ako rýchlo behá, akú má silnú strelu, ako dobre prihráva, ako dobre vedie loptu a milión päť podobných vecí. Nebojsa, nemusíš teraz k sebe domov zavolať Ronalda a dať mu behať šesťdesiatku na čas. Meranie údajov už za teba urobili iný. Na <a href="https://www.youtube.com/watch?v=2T3BmvWIHy4" target="_blank">videu</a> si môžeš pozrieť, ako to spravili.<br /><br />
 
 Namerané údaje zapísali do tabuľky a zverejnili ju na internet [1]. My sme si ju odtiaľ stiahli, aby sme vás mohli trápiť so štatistikou. Takže údaje máme a môžeme si ich trochu poprezerať.
 
@@ -124,7 +124,7 @@ Máme už údaje o futbalistoch, máme atribút, ktorý definuje ako je futbalis
 <div class='literature'>
 [1] FIFA 20 complete player dataset. 2020. https://www.kaggle.com/stefanoleone992/fifa-20-complete-player-dataset <br /><br />
 [2] Overall Rating. 2021. https://www.fifplay.com/encyclopedia/overall-rating/ <br /><br />
-[3] Player Attributes. 2021. https://www.fifplay.com/encyclopedia/player-attributes/ <br /><br />
+[3] Player Attributes. 2021. https://www.fifplay.com/encyclopedia/player-attributes/
 
 </div>
 </div>
