--- a/pages/vocabulary.html
+++ b/pages/vocabulary.html
@@ -125,7 +125,7 @@ Suma je len vznešene zapísané spočítavanie. Keď potrebuješ spočítať ne
 <div class='literature'>
 [1] Slovník súčasného slovenského jazyka. 2015. https://slovnik.juls.savba.sk <br /><br />
 
-[2] Synonymický slovník slovenčiny. 2004. https://slovnik.juls.savba.sk <br /><br />
+[2] Synonymický slovník slovenčiny. 2004. https://slovnik.juls.savba.sk
 </div>
 
 </div>
