--- a/pages/gonio_formulas.html
+++ b/pages/gonio_formulas.html
@@ -9,8 +9,8 @@ permalink: goniometria_vzorce
 
 <h1>Vzorce z goniometrie</h1>
 
-Na tejto stránke sa ti pokúsime objasniť vzorce, ktoré nájdeš v goniometrii. Spravili sme to formou videií, lebo je toho veľa. Všetky videá nájdeš na našom <a href="https://www.youtube.com/@mathematikos_sk" target="_blank">youtube</a>. Zatiaľ máme spravené tieto:<br /><br />
+Na tejto stránke sa ti pokúsime objasniť vzorce, ktoré nájdeš v goniometrii. Spravili sme to formou videí, lebo je toho veľa. Všetky videá nájdeš na našom <a href="https://www.youtube.com/@mathematikos_sk" target="_blank">youtube</a>. Zatiaľ máme spravené tieto:<br /><br />
 
-1. <a href="https://www.youtube.com/watch?v=0qy22X111_c&t=1s&ab_channel=Mathematikos" target="_blank">Kosínusová veta</a><br />
+1. <a href="https://www.youtube.com/watch?v=0qy22X111_c" target="_blank">Kosínusová veta</a><br />
 
 </div>
